--- a/package.json
+++ b/package.json
@@ -11,11 +11,20 @@
   "dependencies": {
     "@material-ui/core": "latest",
     "@material-ui/icons": "^4.9.1",
+    "axios": "0.21.1",
     "clsx": "latest",
     "react": "latest",
     "react-dom": "latest",
+    "react-helmet": "6.1.0",
+    "react-hook-form": "6.15.1",
+    "react-redux": "7.2.2",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "latest"
+    "react-scripts": "latest",
+    "redux": "4.0.5",
+    "redux-devtools-extension": "2.13.8",
+    "redux-logger": "3.0.6",
+    "redux-persist": "6.0.0",
+    "redux-thunk": "2.3.0"
   },
   "browserslist": {
     "production": [
